style.css
/*
Theme Name: SoloFolio
Theme URI: http://solofol.io/
Description: A portfolio platform for creatives.
Version: 7.0.50
Author: Joel Hawksley
Author URI: http://www.joelhawksley.com/
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Tags: one-column, two-columns, fluid-layout, responsive-layout, full-width-template, theme-options, photoblogging
Text Domain: solofolio
*/

* {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section { display: block }
ol,
ul { list-style: none }
table {
  border-collapse: collapse;
  border-spacing: 0;
}
*,
*:before,
*:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
html { font-size: 16px }
body {
  font-family: 'Roboto', Helvetica, Verdana, Arial, Utkal, sans-serif;
  -webkit-text-size-adjust: 100%;
  font-weight: normal;
  line-height: 1.3;
  margin: 0;
  padding: 0;
  text-align: left;
}
dd, dt, li, p { line-height: 1.6em }
p, table, ul, ol { margin: 1rem 0 }
dd { margin-bottom: 1em }
th { font-weight: bold }
.bypostauthor {
  border-left: 5px solid rgba(125,125,125,.2);
  padding-left: .5rem;
}
th { background-color: rgba(125,125,125,.2) }
td, th { padding: .5rem 1rem .5rem 1rem; border: 1px solid rgba(125,125,125,.2); }
dt { font-weight: bold; margin-top: .5rem; }
li { list-style-type: square; list-style-position: inside; }
ul ul, ol ol { margin-left: 1rem }
ol li { list-style-type: decimal }
code, pre, tt, var { background-color: rgba(125,125,125,.2); }
pre { padding: .5rem; word-wrap: break-word;}
em, cite { font-style: italic }
sup, sub { font-size: .7em }
sup { vertical-align: super }
sub { vertical-align: sub }
acronym { text-transform: uppercase }
acronym, abbr { border-bottom: .1em dotted }
blockquote p, .sticky { padding: 1em; border-left: 8px solid rgba(125,125,125,.2); }
blockquote cite { display: block; margin-top: 1em; }
strong { font-weight: bold }
img { border: none }
/* Floats */
.left { float: left }
.right { float: right }
.entry .alignleft { padding-right: 1rem; }
.entry .alignright { padding-left: 1rem; }
/* Images */
/* Links */
a { font-weight: bold }
a:link,
a:visited {
  text-decoration: none;
  outline: none !important;
}
a:hover,
a:active {
  outline: none !important;
  -webkit-transition: all .1s linear;
  transition: all .1s linear;
}
a img {
  margin: 0;
  padding: 0;
  border: none;
  text-decoration: none;
}
a:hover img { text-decoration: none }
.more-link {
  display: block;
  margin: 1rem 0;
}
/* Typography */
h1,
h2,
h3,
h4,
h5 {
  font-weight: normal;
  line-height: 1;
  margin-bottom: 1rem;
  padding: 0;
}
h1 { font-size: 3rem }
h2 { font-size: 1.86rem }
h3 { font-size: 1.28rem }
h4 { font-size: 1rem }
h5 { font-size: .85rem }
small {
  font-size: .85rem;
  line-height: 1;
}
.header-content h3 {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: bold;
  text-transform: uppercase;
  margin: 0;
}
.header-content ul { margin: 0; }
p {
  padding: 0;
  max-width: 600px;
}
p:first-child { margin-top: 0 }
.site-title {
  font-weight: bold;
  line-height: 1;
  margin: 0;
  padding: 0;
}
.site-title a:link,
.site-title a:visited { background-color: transparent }
.site-title a:hover,
.site-title a:active { background-color: transparent }
.header a { font-weight: normal }
.logo {
  line-height: 1;
  width: auto;
}
.header-content ul li {
  font-size: 12px;
  font-weight: normal;
  list-style-type: none;
  list-style-position: initial;
}
.sidebar-widget, .solofolio-custom-menu { margin-top: 15px }
form { font-size: .9rem }
input,
button {
  height: 2rem;
  vertical-align: top;
}
.form-submit input,
.searchform button {
  cursor: pointer;
  line-height: 1;
}
.searchform button {
  margin-left: .25rem;
  width: 2rem;
}
.logo-img a { display: inline-block }
.logo a img {
  border: none;
  font-weight: normal;
  text-decoration: none;
  max-width: 100%;
}
.logo a img:hover { border: none }
.site-title { font-size: 24px }
.site-title a { font-weight: bold }
.footer {
  border-top-left-radius: 2px;
  font-size: .78rem;
  line-height: 1;
}
.footer:hover { opacity: 1 }
.footer:hover .copyright-label { display: none }
.footer:hover .copyright-hidden { display: block }
.post-meta { margin-bottom: 1em }
.post-byline { font-weight: normal }
h2.post-title {
  font-size: 22px;
  margin-bottom: .25rem;
}
h2.post-title a { font-weight: normal; }
.entry .tag-links { max-width: 600px }
.entry .tag-links a { padding: 0 2px }
.content-index,
.content-search { width: 100% }
.content-about { max-width: 900px }
.content-about-image {
  width: 50%;
  float: right;
  padding: 0 0 2rem 2rem;
}
.content-about-image img {
  width: 100%;
  height: auto;
}
.content-about-content {
  float: left;
  width: 50%;
  max-width: 500px;
  display: block;
}
input, textarea, button {
  background-color: transparent;
  border-radius: 2px;
  margin: 0;
  padding: .5rem;
}
input:focus, textarea:focus, button:focus { outline: none }
#respond label { display: block }
.comments-area h3 { font-weight: bold }
.comments { padding-bottom: 3rem }
.comment { margin-bottom: 1rem }
.comments h4.comment-author { margin-bottom: 0 }
.comment-list li {
  list-style-type: none;
  margin-bottom: 1.5rem;
}
.comment-list li p:last-child {
  margin-bottom: 0;
}
.comment-meta { margin-bottom: .5rem }
.comments h4, .comments h4 a {
  font-weight: bold;
  line-height: 1;
  margin-bottom: .25rem;
}
.comments small {
  font-weight: normal;
  margin-bottom: 0;
}
.comments p.form-submit { margin: 0 }
.comments p.form-submit input {
  background-color: transparent;
  float: right;
  max-width: 100%;
  width: auto;
}
.comments textarea {
  display: block;
  height: 225px;
}
.comments input, .comments textarea { width: 100%; }
.entry .aligncenter { display: block }
/* ... */

